# Robomaster_Phoenix_Custom_Client

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ubuntu-22.04-Slint-v1.14.1-build.yml  ubuntu-24.04-Slint-v1.14.1-build.yml
config/: client_setting.json  config.json
include/: callback_center.hpp  component_manager.hpp  video_pipeline.hpp  video_source.hpp
include/drivers/: driver_ffmpeg_decoder.hpp  driver_gamepad.hpp  driver_mqtt.hpp  driver_socket.hpp  driver_urdf_loader.hpp  driver_urdf_renderer.hpp  driver_urdf_types.h
include/protocol/: protocol.pb.h  protocol.proto
include/raw300_decoder/: annexb_reassembler.hpp  decoder_utils.hpp  frame_sequence_decoder.hpp  gst_h264_decoder.hpp  mat_decoder.hpp  raw300_decoder.hpp  vtx_mqtt_stream_processor.hpp
include/scheduler_center/: scheduler_base.h  scheduler_choreography.h  scheduler_classic.h  scheduler_define.h  scheduler_factory.h  scheduler_manager.h  scheduler_test.h
include/utils/: logger.hpp  singleton.hpp  utils_cv.hpp  utils_json.hpp  utils_json_refactor.hpp
include/video_decoder/: video_decoder.hpp
scripts/: gen_proto.sh  setup.bash
src/: callback_center.cpp  component_manager.cpp  main.cpp  video_pipeline.cpp  video_source.cpp
src/drivers/: driver_gamepad.cpp  driver_mqtt.cpp  driver_socket.cpp  driver_urdf_loader.cpp  driver_urdf_renderer.cpp
src/protocol/: protocol.pb.cc
src/raw300_decoder/: annexb_reassembler.cpp  decoder_utils.cpp  frame_sequence_decoder.cpp  gst_h264_decoder.cpp  mat_decoder.cpp  raw300_decoder.cpp  vtx_mqtt_stream_processor.cpp
src/scheduler_center/: scheduler_choreography.cpp  scheduler_classic.cpp  scheduler_manager.cpp
src/utils/: logger.cpp  utils_cv.cpp
src/video_decoder/: video_decoder.cpp
tests/: test_urdf_render.cpp
ui/: app-window.slint  callback_factory.slint  main_menu.slint  page_about.slint  page_dashboard.slint  page_setting.slint  referee_data_struct.slint  side_bar.slint  tab_view.slint
ui/components/: base_component.slint  component_render.slint
ui/components/std_components/: coordinate.slint  game_status.slint  health_bar.slint  map.slint  module_status.slint  sight.slint  urdf_viewer.slint
ui/mainwindow/: app-window.slint  main_menu.slint  side_bar.slint  tab_view.slint
ui/pages/: page_about.slint  page_dashboard.slint  page_design.slint  page_setting.slint
ui/pages/page_about/: page_about.slint
ui/pages/page_dashboard/: page_dashboard.slint  performance_select_window.slint
ui/pages/page_design/: attribute_bar.slint  page_design.slint
ui/pages/page_setting/: page_setting.slint
